applications/vanguard-services/overlays/ingress/external-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: identity-service-proxy
  namespace: vanguard-frontend
spec:
  type: ExternalName
  externalName: identity-service.vanguard-identity.svc.cluster.local
---
apiVersion: v1
kind: Service
metadata:
  name: permissions-service-proxy
  namespace: vanguard-frontend
spec:
  type: ExternalName
  externalName: permissions-service.vanguard-permissions.svc.cluster.local
---
apiVersion: v1
kind: Service
metadata:
  name: sso-service-proxy
  namespace: vanguard-frontend
spec:
  type: ExternalName
  externalName: sso-service.vanguard-sso.svc.cluster.local
