applications/vanguard-services/overlays/ingress/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: vanguard
  namespace: vanguard-frontend
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`vngenterprise.com`) && PathPrefix(`/api/identity`)
      kind: Rule
      priority: 100
      middlewares:
        - name: strip-identity
      services:
        - name: identity-service-proxy
          port: 8080
    - match: Host(`vngenterprise.com`) && PathPrefix(`/api/permissions`)
      kind: Rule
      priority: 100
      middlewares:
        - name: strip-permissions
      services:
        - name: permissions-service-proxy
          port: 8081
    - match: Host(`vngenterprise.com`) && PathPrefix(`/api/sso`)
      kind: Rule
      priority: 100
      middlewares:
        - name: strip-sso
      services:
        - name: sso-service-proxy
          port: 8082
    - match: Host(`vngenterprise.com`)
      kind: Rule
      priority: 1
      services:
        - name: frontend
          port: 3000
  tls:
    store:
      name: default
      namespace: traefik
